--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IvanStefchev</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Text about me</h1>
+    <div class="headings">
+    <h2>about me</h2>
+    </div>
+    <p class="text">My name is Ivan Stefchev, and I’m a person with an active spirit and a passion for new experiences. 
+        I’m always looking to grow, both personally and professionally, and I believe that some of the best lessons in life come from
+         real-world experiences—through challenges, adventures, and meaningful connections.</p>
+         <div class="headings">
+         <h2>Hobbies and Interests</h2>
+         </div>
+         <p class="text">In my free time, I love watching football. It’s more than just a sport to me—it’s a source of excitement, emotion, and endless stories. I also enjoy traveling, as it allows me to discover new places, cultures, and perspectives. Every journey is an opportunity to learn, grow, and find inspiration.
+</p>
+</body>
+</html>
